# Rhombus-exercise

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  CONTEXT.md  Caddyfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  instruction.md  milestones.md
backend/: .dockerignore  Dockerfile  Dockerfile.prod  Dockerfile.web  manage.py  pyproject.toml
backend/api/: urls.py  views.py
backend/core/: settings.py  urls.py
backend/jobs/: models.py  services.py  spark.py  tasks.py  tests.py
backend/jobs/migrations/: 0001_initial.py  0002_alter_processingjob_status.py  0003_processingjob_output_file_path_and_more.py  0004_alter_processingjob_dataset_and_more.py  0005_processingjob_generated_regexes_and_more.py  0006_alter_processingjob_status.py
backend/tests/api/: test_job_cancel.py  test_job_lifecycle.py  test_job_list.py  test_job_results.py  test_job_start.py  test_job_status.py  test_upload.py  test_upload_detail.py  test_upload_list.py  tests.py
backend/tests/jobs/: test_e2e_pipeline.py  test_spark_factory.py  test_spark_processing.py  tests.py  tests_pagination.py  tests_regex_eval.py  tests_regex_safety.py  tests_service.py  tests_storage.py  tests_tasks.py
backend/tests/uploads/: tests.py  tests_normalization.py
backend/uploads/: __init__.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py
backend/uploads/migrations/: 0001_initial.py  0002_datasetupload_column_names_and_more.py
backend/uploads_storage/output/1/result/: .part-00000-6e44ac85-2850-4e61-9418-56a542f88c6b-c000.snappy.parquet.crc
backend/uploads_storage/output/2/result/: .part-00000-d4756337-e567-485c-a0e9-bde2958f5898-c000.snappy.parquet.crc
backend/uploads_storage/output/3/result/: .part-00000-6014823e-0628-4335-9e63-68154295e0a9-c000.snappy.parquet.crc
docs/adr/: 0001-postgresql-for-models-filesystem-for-pyspark-uploads.md  0002-parquet-as-canonical-internal-format.md  0003-two-llm-calls-triage-and-regex-generation.md  0004-pyspark-local-mode-with-singleton-session.md  0005-retry-cancellation-and-api-design.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
(+15 files in other folders)
