[project]
name = "rhombus-backend"
version = "0.1.0"
description = "Distributed NL-to-Regex Data Processing Platform Backend"
requires-python = ">=3.10"
dependencies = [
    "django==4.2.11",
    "djangorestframework==3.15.1",
    "django-cors-headers==4.3.1",
    "celery==5.3.6",
    "redis==5.0.3",
    "pyspark==3.5.1",
    "pandas==2.2.1",
    "openpyxl==3.1.2",
    "google-genai==0.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
