[project]
name = "rhombus-backend"
version = "0.1.0"
description = "Rhombus AI – Take-Home Exercise Backend"
requires-python = ">=3.10"
dependencies = [
    "django==4.2.11",
    "djangorestframework==3.15.1",
    "django-cors-headers==4.3.1",
    "celery==5.3.6",
    "redis==5.0.3",
    "pyspark==3.5.1",
    "pandas==2.2.1",
    "openpyxl==3.1.2",
    "google-genai==0.2.0",
    "psycopg2-binary==2.9.9",
    "openai==1.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "uploads", "jobs"]
